tests/golden/type_errors/named_struct_duplicate_literal_field.cd
struct Person { name: string, age: number }
let p: Person = Person { name: "Ada", name: "Grace", age: 36 };
