tests/golden/type_errors/named_struct_duplicate_literal_field.err
Type error at 2:39: duplicate field `name` in struct literal
  let p: Person = Person { name: "Ada", name: "Grace", age: 36 };
                                        ^
